fixing wrapping menu
git-svn-id: http://svn.ccnmtl.columbia.edu/tobaccocessation/trunk@18220 1f418930-7ff8-0310-b8ad-c653122473bc

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -1036,7 +1036,7 @@ float: left;
 	display: block;
 	float: left;
 	margin: 0 ;
-	padding: 3px .545em 2px .545em;
+	padding: 3px .5em 2px .5em;
 	border: none;
 	border-right: 1px solid #eaa141;
 	line-height: 24px;
